# string-shuffler

./: README.md  pyproject.toml
string_shuffler/: main.py
string_shuffler/static/: styles.css
string_shuffler/templates/: shuffler.html
