[tool.poetry]
name = "string-shuffler"
version = "0.1.0"
description = ""
authors = ["VerenaL <verelanz@gmail.com>"]
readme = "README.md"
packages = [{include = "string_shuffler"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-string-utils = "^1.0.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
